fix slider overflow

--- a/src/styles/middlesection.scss
+++ b/src/styles/middlesection.scss
@@ -158,7 +158,7 @@
 
 		& .testimonials-slider {
 			margin-bottom: 50px;
-			overflow: visible;
+			overflow-y: visible;
 
 			& .swiper-wrapper {
 				& .slide-box {
